--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,16 +14,74 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/imageViewLogoAppLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="-5dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="166dp"
+            android:src="@drawable/logo_cedcufps_login"
+            android:transitionName="logo_splash" />
 
-        <com.google.android.gms.common.SignInButton
+        <ImageView
+            android:id="@+id/imageViewDiseñoLoginTop"
+            android:layout_width="350dp"
+            android:layout_height="448dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="83dp"
+            android:layout_marginTop="-108dp"
+            android:layout_marginEnd="-22dp"
+            android:src="@drawable/dise_o_login_top" />
+
+        <ImageView
+            android:id="@+id/imageViewDiseñoLoginBottom"
+            android:layout_width="478dp"
+            android:layout_height="458dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="-96dp"
+            android:layout_marginEnd="29dp"
+            android:layout_marginBottom="1dp"
+            android:src="@drawable/dise_o_login_bottom" />
+
+        <TextView
+            android:id="@+id/textViewTitulo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/imageViewDiseñoLoginBottom"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="-12dp"
+            android:layout_marginTop="27dp"
+            android:layout_marginEnd="12dp"
+            android:fontFamily="@font/bungee_shade"
+            android:text="@string/titulo"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/colorBtnFlotante"
+            android:textSize="30sp"
+            android:transitionName="text_splash"/>
+
+        <com.shobhitpuri.custombuttons.GoogleSignInButton
             android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="139dp"
-            android:layout_marginBottom="189dp" />
-
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="188dp"
+            android:layout_marginTop="471dp"
+            android:layout_marginEnd="32dp"
+            android:text="@string/btn_google"
+            app:isDarkTheme="true" />
 
     </RelativeLayout>
 
