modales del fragmento jornadas, se arreglo inicio de sesion rapido en el splash

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,6 +33,7 @@
         android:layout_height="wrap_content"
         app:backgroundTint="@color/colorBtnFlotante"
         app:layout_anchor="@id/bottomAppBar"
+        app:rippleColor="@color/colorPrimary"
         app:srcCompat="@drawable/ic_baseline_power_settings_new_24_white" />
 
 
