--- a/app/src/main/res/layout/card_curso_layout.xml
+++ b/app/src/main/res/layout/card_curso_layout.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="8dp"
-    android:layout_marginVertical="8dp"
+    android:layout_marginVertical="5dp"
     app:cardCornerRadius="5dp"
     app:cardElevation="4dp">
 
@@ -18,14 +17,13 @@
         android:layout_marginBottom="5dp">
 
         <LinearLayout
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            tools:ignore="RelativeOverlap">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textViewNombre"
+                style="@style/text1Modal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
