--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/aclonica</item>
         <item>@font/amita_bold</item>
+        <item>@font/antic_slab</item>
         <item>@font/bungee_shade</item>
     </array>
 </resources>
