--- a/app/src/main/res/layout/card_curso_layout.xml
+++ b/app/src/main/res/layout/card_curso_layout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="5dp"
     app:cardCornerRadius="5dp"
     app:cardElevation="4dp">
@@ -17,6 +18,7 @@
         android:layout_marginBottom="5dp">
 
         <LinearLayout
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
